<resources>
    <string name="app_name">CellaVino</string>
    <string name="homescreen">Hello World</string>
    <string name="newWineSubmit">Submit</string>
    <string name="sign_out">Sign Out</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="app_not_available">Oops! Looks like we\'ve had a bit too much</string>
    <string name="retrieving_flavors">Retrieving your flavours</string>
    <string name="progress_dialog_loading">Loading...</string>
    <string-array name="navigation_drawer_options">
        <item>AddWine</item>
        <item>CreateNewWine</item>
        <item>Test Option</item>
        <item>Sign Out</item>
    </string-array>

       
    <string-array name="wine_type_array">
        <item>Red</item>
        <item>Rose</item>
        <item>White</item> 
        <item>Fortified</item>   
        <item>Dessert</item>
    </string-array>

    <!-- Base Error Strings-->
    <string name="log_error_updating_data">Error updating data: </string>
    <string name="log_error_the_read_failed">The read failed: </string>
    <string name="log_error_occurred">"Error occurred: "</string>


    <!-- Activity Titles  -->
    <string name="title_activity_create_account">Create Account</string>
    <string name="tasting_name">Tasting Name</string>

    <!-- LoginActivity and Create Account Screen  -->
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_wine_name">Wine name</string>
    <string name="hint_enter_winery_name">Winery</string>
    <string name="hint_enter_wine_vintage">Vintage</string>
    <string name="hint_enter_wine_variety">Grape Variety</string>
    hint_description
    <string name="hint_description">Enter your description here</string>
    <string name="hint_enter_wine_tasting_date">Tasting Date</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="image_view_logo_image">Logo Image</string>
    <string name="hint_update_user_name">Name</string>
    <string name="hint_update_email">email</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_enter_address">Address</string>
    <string name="hint_enter_mobile_number">Mobile</string>
    <string name="update_details">Update</string>

    <string name="title_activity_maps">Near Tasting</string>

    <!-- Tasting Menu Strings-->
    <string name="delete_tasting">Delete Tasting</string>
    <string name="delete_wine">Delete Wine</string>
    <string name="edit_wine">Edit Wine</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="myProfile">My Profile</string>

</resources>
