<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_View="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_new_wine_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/home_background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/user_summary_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/task_card_half_spacing"
                android:elevation="@dimen/task_card_elevation"
                card_View:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif-medium"
                        android:textAllCaps="false"
                        android:textColor="@color/textColorEarthquakeLocation"
                        android:textSize="20sp"
                        tools:text="User" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/textColorEarthquakeLocation"
                            android:textSize="20sp"
                            android:text="Previous Tasting Score: " />

                        <TextView
                            android:id="@+id/user_previous_tasting_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/textColorEarthquakeLocation"
                            android:textSize="20sp"
                            tools:text="###" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/textColorEarthquakeLocation"
                            android:textSize="20sp"
                            android:text="Tasting Level: " />

                        <TextView
                            android:id="@+id/user_tasting_level"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/textColorEarthquakeLocation"
                            android:textSize="20sp"
                            tools:text="###" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/textColorEarthquakeLocation"
                            android:textSize="20sp"
                            android:text="Total Wines Tasted: " />

                        <TextView
                            android:id="@+id/user_total_wines_tasted"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/textColorEarthquakeLocation"
                            android:textSize="20sp"
                            tools:text="###" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/textColorEarthquakeLocation"
                            android:textSize="20sp"
                            android:text="Total Points: " />

                        <TextView
                            android:id="@+id/total_user_points"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/textColorEarthquakeLocation"
                            android:textSize="20sp"
                            tools:text="###" />
                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/edit_personal_details_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/task_card_half_spacing"
                android:elevation="@dimen/task_card_elevation"
                card_View:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/update_user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_update_user_name"
                            android:inputType="textAutoComplete" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/update_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_update_email"
                            android:inputType="textAutoComplete" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/create_date_of_birth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_date_of_birth"
                            android:inputType="textAutoComplete" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/update_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_enter_address"
                            android:inputType="textAutoComplete" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/update_address_line_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_enter_address"
                            android:inputType="textAutoComplete" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/update_address_line_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_enter_address"
                            android:inputType="textAutoComplete" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/update_mobile_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/hint_enter_mobile_number"
                            android:inputType="textAutoComplete" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/update_personal_details_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp"
                android:text="@string/update_details" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
